--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
-    "morgan": "~1.6.1",
-    "gps-tracking": "~1.0.10",
+    "gpslibgt06n": "0.0.1",
+    "mongodb-uri": "~0.9.7",
     "mongoose": "~4.3.3",
-    "mongodb-uri": "~0.9.7"
+    "morgan": "~1.6.1"
   }
 }
