--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
-    "gpslibgt06n": "~0.0.1",
+    "gpslibgt06n": "0.0.2",
     "mongodb-uri": "~0.9.7",
     "mongoose": "~4.3.3",
     "morgan": "~1.6.1"
