--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gpslibgt06n": "~0.0.2",
     "mongodb-uri": "~0.9.7",
     "mongoose": "~4.3.3",
-    "morgan": "~1.6.1"
+    "morgan": "~1.6.1",
+    "node-debug": "^0.1.0"
   }
 }
