--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mongodb-uri": "~0.9.7",
     "mongoose": "~4.3.3",
     "morgan": "~1.6.1",
-    "node-debug": "^0.1.0"
+    "node-debug": "^0.1.0",
+    "moment": "^2.11.1"
   }
 }
