--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "gpslibgt06n": "~0.0.2",
+    "moment": "^2.11.1",
     "mongodb-uri": "~0.9.7",
     "mongoose": "~4.3.3",
     "morgan": "~1.6.1",
-    "node-debug": "^0.1.0",
-    "moment": "^2.11.1"
+    "node-debug": "^0.1.0"
   }
 }
